# pipelinemind

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Critical_Fix.sh  Docker_Networking_Fix.sh  Dockerfile.api  PipelineMind_SRS_Architecture.docx  README.md  SECURITY.md  all_remaining_fix.sh  bashcommand1+2+3.sh  bashcommand1+2.sh  bashcommand1.sh  bashcommand2.sh  conftest.py  docker_speed_up.sh  docs.sh  final.sh  fix.sh  fix_of_agent_and_apicall.sh  fix_of_agent_and_apicall2.sh  fixofbashcommand1+2+3.sh  pm_config.py
pipelinemind/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pm_config.py  pyproject.toml
pipelinemind/agent/: agent_loop.py  llm_router.py  mcp_resources.py
pipelinemind/agent/tools/: validators.py
pipelinemind/api/: main.py  metrics.py
pipelinemind/api/middleware/: logging.py
pipelinemind/api/routers/: chat.py  dq.py  impact.py  pipelines.py
pipelinemind/data/catalogue/: pii_registry.json  tables_metadata.json
pipelinemind/data/dags/: orders_dag.yml
pipelinemind/data/pipeline_repo/: metrics_pipeline.py  sessions_pipeline.py
pipelinemind/data/schema_snapshots/: baseline.json
pipelinemind/db/: schema.sql  seeder.py
pipelinemind/docs/: API_REFERENCE.md  ARCHITECTURE.md  BASH_COMMANDS.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  HANDOVER.md  SETUP.md
pipelinemind/ingestion/: embedders.py  summary_generator.py
pipelinemind/retrieval/: bm25_retriever.py  chroma_retriever.py  context_builder.py  hyde.py  intent_classifier.py  reranker.py
pipelinemind/scripts/: ingest.sh  ingest_fast.sh  run_eval.sh  run_tests.sh  seed_db.sh  start_api.sh  start_ui.sh
pipelinemind/ui/pages/: 01_Chat.py  (+2 more)
(+78 files in other folders)
